# dehelpers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATING.md  README.md  ROADMAP.md  SECURITY.md  architecture.mmd  heartbeat.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  heartbeat.yml  publish-pypi.yml
docs/examples/: basic_http_client.py  paginated_ingestion.py  structured_logging.py
src/de_pipeline_helpers/: __init__.py  _redact.py  api.py  db.py  exceptions.py  logger.py
src/dehelpers/: __init__.py  _redact.py  api.py  db.py  logger.py
tests/: conftest.py  test_api.py  test_db.py  test_logger.py  test_redact.py
