[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dehelpers"
version = "0.1.4"
description = "Lightweight utilities for data engineering pipelines: resilient HTTP, PostgreSQL helpers, and structured logging."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Shardul Chogale" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.0",
]

[project.optional-dependencies]
dataframe = ["pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
    "pytest-postgresql",
    "ruff>=0.11",
    "mypy>=1.10",
    "types-requests>=2.31",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/shard-c6/dehelpers"
Repository = "https://github.com/shard-c6/dehelpers"
Documentation = "https://github.com/shard-c6/dehelpers/tree/main/docs"
"Issue Tracker" = "https://github.com/shard-c6/dehelpers/issues"
Changelog = "https://github.com/shard-c6/dehelpers/blob/main/CHANGELOG.md"
"Medium Article" = "https://medium.com/@shardulchogale1983"

[tool.hatch.build.targets.wheel]
packages = ["src/dehelpers"]
artifacts = ["src/dehelpers/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "postgres: requires a real PostgreSQL instance (deselect with '-m not postgres')",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
